# 20260112boot

./: .version.txt  .~lock.localzip.xls#  c2f_simple.py  card.py  carddeck.py  johnlib.py  no_typing.py  pygrep.py  running_external_programs.py  script_template.py  simple_functions.py  simple_objects.py  use_johnlib  use_mod.py  using_variables.py
ANSWERS/: for_usage.py  get_file_size.py
EXAMPLES/: count_with_counter.py  count_with_dict.py  creating_tuples.py  custom_sort_keys.py  date_parsing_easy.py  datetime_ex.py  defaultdict_ex.py  dict_update.py  enumerate.py  existence.py  hints_functions.py  hints_variables.py  http_consume_api.py  http_read_html.py  http_read_pdf.py  indexing_and_slicing.py  iterable_unpacking.py  iterating_over_arrays.py  lambda_sort.py  list_comps_and_gen_expr.py  listing_directories_listdir.py  listing_directories_scandir.py  nested_sort.py  numeric_examples.py  os_walk2.py  print_examples.py  read_airport_codes_into_dictionary.py  reading_files_line_by_line.py  regex_finding_matches.py  regex_flags.py  regex_newlines.py  regex_special.py  regex_sub_backrefs.py  runtime_errors.py  set_examples.py  shutil_ex.py  shutil_make_archive.py  sort_holmes.py  sorting_dicts.py  str_vs_repr.py  (+10 more)
NOTEBOOKS/: BabyNames.ipynb  Pandas1.ipynb  Pandas2.ipynb  Pandas3.ipynb  PandasIntro.ipynb  PandasMergeConcatJoinDemo.ipynb  PandasMergeExample.ipynb  PandasPivotDemo.ipynb  PandasPivotEnergy.ipynb  PandasResources.ipynb  (+9 more)
wombats/: README.md  pyproject.toml
wombats/docs/source/: conf.py  index.rst
wombats/src/: wombats.py
wombats/tests/: test_wombats.py
(+6 files in other folders)
